# PerLogistic247

./: .env.example  .gitignore  CONTRIBUTING.md  PRD.md  PRODUCT_README.md  README.md  docker-compose.yml  package.json
.github/: labels.yml
Perlogistics-FE/: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
Perlogistics-FE/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
Perlogistics-FE/app/analytics/: page.tsx
Perlogistics-FE/app/auth/: page.tsx
Perlogistics-FE/app/dashboard/: page.tsx
Perlogistics-FE/app/settings/: page.tsx
Perlogistics-FE/app/shipments/: page.tsx
Perlogistics-FE/app/tracking/: page.tsx
Perlogistics-FE/components/atoms/: Badge.tsx  Button.tsx  KpiCard.tsx
Perlogistics-FE/components/molecules/: Input.tsx  ShipmentCard.tsx  StatusBadge.tsx  StatusTimeline.tsx
Perlogistics-FE/components/organisms/: Layout.tsx  Modal.tsx  ShipmentDetailModal.tsx  Sidebar.tsx  TopBar.tsx
Perlogistics-FE/components/providers/: QueryProvider.tsx
Perlogistics-FE/lib/hooks/: useAnalytics.ts  useMobile.ts  useShipments.ts
Perlogistics-FE/lib/stores/: authStore.ts  uiStore.ts  walletStore.ts
backend/: Cargo.toml  Dockerfile  cargo_report.txt  config.toml
backend/migrations/: 20240517000001_initial_schema.sql  README.md
backend/src/: main.rs
backend/src/migrations/: mod.rs  runner.rs
backend/src/rate_limit/: config.rs  distributed.rs  in_memory.rs  middleware.rs  mod.rs  redis.rs
contracts/: Cargo.toml  Makefile
docs/: api-reference.md  deployment-guide.md  protocol-layers.md
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  stellar.ts
frontend/src/types/: index.ts
scripts/: init-db.sql
