[package]
name = "supply-chain-backend"
version = "0.1.0"
edition = "2021"
authors = ["Supply Chain Protocol Team"]
description = "Backend API for supply chain visibility and coordination protocol"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Cryptography
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = "2.0"

# Stellar/Soroban (commented out for rate limiting implementation)
# soroban-sdk = "20.0.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenv = "0.15"
config = "0.14"

# Rate limiting
governor = "0.6"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"

[[bin]]
name = "server"
path = "src/main.rs"
