[workspace]
resolver = "2"

[package]
name = "supply-chain-contracts"
version = "0.1.0"
edition = "2021"
authors = ["Supply Chain Protocol Team"]
description = "Soroban smart contracts for supply chain visibility and coordination"

[dependencies]
soroban-sdk = "0.9.2"

[dev_dependencies]
soroban-sdk = { version = "0.9.2", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = true
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
